--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "To manage a big csv file",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node app.js"
   },
   "repository": {
     "type": "git",
